--- a/www/index.html
+++ b/www/index.html
@@ -24,7 +24,7 @@
 
 <div id="header" ng-show="headerShow">
   <div class="header_button left {{headerIconLeftClass}}" ng-click="back()"> <i class="fa {{headerIconLeft}}"></i></div>
-  <div class="header_button right {{headerIconRightClass}}"> <i class="fa {{headerIconRight}}"></i></div>
+  <div class="header_button right {{headerIconRightClass}}" ng-click="setting()"><i class="fa {{headerIconRight}}"></i></div>
   <img id="logo" src="./img/logo.png" ng-show="!title"/>  
   <p id="header_title">{{title}}</p>
 </div>
@@ -40,8 +40,8 @@
 <div id="footer_spacer" ng-show="footerShow"></div>
 
 <div id="footer" ng-show="footerShow">
-  <div class="footer_button"><i class="fa fa-home"></i></div>
-  <div class="footer_button"><i class="fa fa-user"></i></div>
+  <div class="footer_button" ng-click="home()" ng-class="location=='/'?  'selected' : '' "><i class="fa fa-home"></i></div>
+  <div class="footer_button" ng-click="mypage()" ng-class="location=='mypage'?  'selected' : '' "><i class="fa fa-user"></i></div>
 </div>
 
 </body>
