--- a/www/index.html
+++ b/www/index.html
@@ -11,8 +11,8 @@
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular-touch.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="./js/mobile-angular-ui.js"></script>
-<!-- <script src="./js/jquery-ui.min.js"></script> -->
-<!-- <script src="./js/jquery.ui.touch-punch.min.js"></script> -->
+<script src="./js/ng-cordova.js"></script>
+<script src="cordova.js"></script>
 <script src="./js/app.js"></script>
 <script src="./js/controllers.js"></script>
 <link rel="stylesheet" type="text/css" href="./css/reset.css">
