--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -6,12 +6,13 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">  
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular-animate.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular-route.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular-touch.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="./js/mobile-angular-ui.js"></script>
-<!-- <script src="./js/jquery-ui.min.js"></script> -->
-<!-- <script src="./js/jquery.ui.touch-punch.min.js"></script> -->
+<script src="./js/ng-cordova.js"></script>
+<script src="cordova.js"></script>
 <script src="./js/app.js"></script>
 <script src="./js/controllers.js"></script>
 <link rel="stylesheet" type="text/css" href="./css/reset.css">
@@ -22,8 +23,8 @@
 <body>
 
 <div id="header" ng-show="headerShow">
-  <div class="header_button left {{headerIconLeftClass}}"><i class="fa {{headerIconLeft}}"></i></div>
-  <div class="header_button right {{headerIconRightClass}}" ng-click="post"><i class="fa {{headerIconRight}}"></i></div>
+  <div class="header_button left {{headerIconLeftClass}}" ng-click="back()"><i class="fa {{headerIconLeft}}"></i></div>
+  <div class="header_button right {{headerIconRightClass}}" ng-click="setting()"><i class="fa {{headerIconRight}}" ></i></div>
   <img id="logo" src="./img/logo.png" ng-show="!title"/>  
   <p id="header_title">{{title}}</p>
 </div>
@@ -31,15 +32,16 @@
 <div id="header_spacer" ng-show="headerShow"></div>
 
 
-<div id="main" ng-view></div>
+<div class="view-animate-container">
+  <div id="main" ng-view class="{{isViewAnimate}}"></div>
+</div>
+
 
 <div id="footer_spacer" ng-show="footerShow"></div>
 
 <div id="footer" ng-show="footerShow">
-  <div class="footer_button"><i class="fa fa-cutlery"></i></div>
-  <div class="footer_button"><i class="fa fa-comment"></i></div>
-  <div class="footer_button"><i class="fa fa-user"></i></div>
-  <div class="footer_button"><i class="fa fa-cog"></i></div>
+  <div class="footer_button" ng-click="home()" ng-class="location=='/'?  'selected' : '' "><i class="fa fa-home"></i></div>
+  <div class="footer_button" ng-click="mypage()" ng-class="location=='mypage'?  'selected' : '' "><i class="fa fa-user"></i></div>
 </div>
 
 </body>
